<resources>
    <!--¨General -->
    <string name="app_name">Speed Quiz</string>
    <string name="Placeholder">Placeholder</string>
    <string name="Placeholder_number">0</string>

    <!-- Menu -->
    <string name="main_menu_settings">Settings</string>
    <string name="main_menu_night_mode">Night Mode</string>

    <!-- Welcome page -->
    <string name="button_edit_players">Edit players</string>
    <string name="button_start">Play !</string>
    <string name="edit_player1">Name of player 1</string>
    <string name="edit_player2">Name of player 2</string>
    <string name="player_error_message">Player names can\'t be empty</string>
    <string name="question_added_message">Your question was successfully added to the database</string>
    <string name="question_error_message">Your question couldn\'t be added to the database</string>

    <!-- Game -->
    <string name="game_button_answer">It\'s true !</string>
    <string name="game_button_stop_game">Stop game</string>
    <string name="game_button_replay">Replay</string>
    <string name="game_winner_title">The winner is :</string>
    <string name="game_menu">Return to menu</string>
    <string name="game_draw">Draw. Both players scored the same points</string>
    <string name="game_abandon_match">Are you sure you want to abandon this match ?</string>
    <string name="game_confirm">Yes</string>

    <!-- Settings -->
    <string name="settings_title">Settings</string>
    <string name="settings_app_settings">App settings</string>
    <string name="settings_app_night_mode">Night mode :</string>
    <string name="settings_game_settings">Game settings</string>
    <string name="settings_question_time">Question display time :</string>
    <string name="settings_win_requirement">Win requirement :</string>
    <string name="settings_win_requirement_hint">N° of correct answers to win</string>
    <string name="settings_max_rounds_hint">Max rounds</string>
    <string name="settings_add_question">Add a question :</string>
    <string name="settings_add_question_button_text">Click to add a question</string>
    <string name="setting_leave_settings">Leave settings</string>

    <!-- Add question popup -->
    <string name="popup_question_text">Question text</string>
    <string name="popup_question_answer">Answer is true</string>
    <string name="popup_confirm_question">Confirm and add question</string>
    <string name="popup_exit">Abandon and exit</string>
</resources>