<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/main_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/main_menu"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="5dp"
            android:backgroundTint="@color/colorPrimary">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/main_toolbar"
                app:titleTextColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                />

        </com.google.android.material.appbar.AppBarLayout>

        <Button
            android:id="@+id/main_button_edit_players"
            style="@style/Speed_Quiz.Button.Outlined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_edit_players"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_menu"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_player1"
            style="@style/Speed_Quiz.Edit"
            app:layout_constraintTop_toBottomOf="@id/main_button_edit_players"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_player1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_first_player"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Speed_Quiz.Edit"
            android:id="@+id/input_layout_player2"
            app:layout_constraintTop_toBottomOf="@id/input_layout_player1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_player2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_second_player"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/main_button_play"
            style="@style/Speed_Quiz.Button.Filled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--********************************************************
    Settings
    *********************************************************-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:visibility="visible">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/settings_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:elevation="5dp"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/settings_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:title="@string/settings_title"
                app:titleTextColor="@color/white" />

        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/settings_app_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/component_spacing"
            android:text="@string/settings_app_settings"
            android:textColor="@color/black"
            android:textSize="@dimen/text_h2"
            app:layout_constraintTop_toBottomOf="@id/settings_menu" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/settings_app_night_mode"
            style="@style/Speed_Quiz.Settings.Option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/settings_app_night_mode"
            app:layout_constraintTop_toBottomOf="@id/settings_app_settings" />

        <TextView
            android:id="@+id/settings_game_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/component_spacing"
            android:text="@string/settings_game_settings"
            android:textColor="@color/black"
            android:textSize="@dimen/text_h2"
            app:layout_constraintTop_toBottomOf="@id/settings_app_night_mode" />

        <TextView
            android:id="@+id/settings_display_time"
            style="@style/Speed_Quiz.Settings.Option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_question_time"
            app:layout_constraintTop_toBottomOf="@id/settings_game_settings" />

        <com.google.android.material.slider.Slider
            android:id="@+id/settings_display_time_slider"
            style="@style/Speed_Quiz.Settings.Option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stepSize="0.25"
            android:value="3"
            android:valueFrom="0.5"
            android:valueTo="5"
            app:layout_constraintTop_toBottomOf="@id/settings_display_time" />

        <TextView
            android:id="@+id/settings_win_requirement"
            style="@style/Speed_Quiz.Settings.Option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_win_requirement"
            app:layout_constraintTop_toBottomOf="@id/settings_display_time_slider" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Speed_Quiz.Edit"
            app:layout_constraintTop_toBottomOf="@id/settings_win_requirement"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/settings_win_requirement_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/settings_win_requirement_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="2"
                android:inputType="number"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/settings_leave_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/component_spacing"
            android:text="@string/setting_leave_settings"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>