<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/game_name_player2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Placeholder"
        android:textSize="@dimen/text_h3"
        android:rotation="180"
        android:layout_margin="@dimen/component_spacing"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/game_points_player2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/bigText"
        android:text="@string/Placeholder_number"
        android:rotation="180"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/game_name_player2"
        app:layout_constraintBottom_toTopOf="@id/game_name_player1"/>

    <Button
        android:id="@+id/game_button_player2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/game_button_answer"
        android:rotation="180"
        android:layout_margin="@dimen/component_spacing"
        app:layout_constraintTop_toBottomOf="@id/game_name_player2"
        app:layout_constraintStart_toEndOf="@id/game_points_player2"
        app:layout_constraintEnd_toStartOf="@id/game_points_player1"/>

    <TextView
        android:id="@+id/game_question_player2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Placeholder"
        android:textSize="@dimen/text_h3"
        android:rotation="180"
        android:gravity="center"
        android:layout_margin="@dimen/component_spacing"
        app:layout_constraintTop_toBottomOf="@id/game_button_player2"
        app:layout_constraintStart_toEndOf="@id/game_points_player2"
        app:layout_constraintEnd_toStartOf="@id/game_points_player1"/>

    <TextView
        android:id="@+id/game_points_player1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/bigText"
        android:text="@string/Placeholder_number"
        app:layout_constraintTop_toBottomOf="@id/game_name_player2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/game_name_player1"/>

    <Button
        android:id="@+id/game_button_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_button_stop_game"
        app:layout_constraintTop_toBottomOf="@id/game_question_player2"
        app:layout_constraintBottom_toTopOf="@id/game_question_player1"
        app:layout_constraintStart_toEndOf="@id/game_points_player2"
        app:layout_constraintEnd_toStartOf="@id/game_button_replay"/>

    <Button
        android:id="@+id/game_button_replay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_button_replay"
        app:layout_constraintTop_toBottomOf="@id/game_question_player2"
        app:layout_constraintBottom_toTopOf="@id/game_question_player1"
        app:layout_constraintStart_toEndOf="@id/game_button_stop"
        app:layout_constraintEnd_toStartOf="@id/game_points_player1"/>

    <TextView
        android:id="@+id/game_question_player1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Placeholder"
        android:textSize="@dimen/text_h3"
        android:gravity="center"
        android:layout_margin="@dimen/component_spacing"
        app:layout_constraintBottom_toTopOf="@id/game_button_player1"
        app:layout_constraintStart_toEndOf="@id/game_points_player2"
        app:layout_constraintEnd_toStartOf="@id/game_points_player1"/>

    <Button
        android:id="@+id/game_button_player1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/game_button_answer"
        android:layout_margin="@dimen/component_spacing"
        app:layout_constraintStart_toEndOf="@id/game_points_player2"
        app:layout_constraintEnd_toStartOf="@id/game_points_player1"
        app:layout_constraintBottom_toTopOf="@id/game_name_player1"/>

    <TextView
        android:id="@+id/game_name_player1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Placeholder"
        android:textSize="@dimen/text_h3"
        android:rotation="180"
        android:layout_margin="@dimen/component_spacing"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>